# voice-transcriber

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
STT/: dictado-old.sh  dictado.py  dictado.sh
scripts/: dictado.sh
src/voice_to_text/: __init__.py  __main__.py  cli.py  comparison.py  config.py  configurator.py  constants.py  dictation.py  history.py  i18n.py  lessons.py  phonetics.py  practice.py  recorder.py  transcriber.py  ui.py
tests/: test_cli.py  test_comparison.py  test_config.py  test_history.py  test_lessons.py  test_phonetics.py  test_practice.py  test_recorder_transcriber.py  test_ui.py
